--- a/debian/control
+++ b/debian/control
@@ -34,7 +34,7 @@ Conflicts: cubicweb-multisources
 Replaces: cubicweb-multisources
 Provides: cubicweb-multisources
 Depends: ${python:Depends}, cubicweb-common (= ${source:Version}), cubicweb-ctl (= ${source:Version}), python-logilab-database (>= 1.3.0), cubicweb-postgresql-support | cubicweb-mysql-support | python-pysqlite2
-Recommends: pyro, cubicweb-documentation (= ${source:Version})
+Recommends: pyro (< 4.0.0), cubicweb-documentation (= ${source:Version})
 Description: server part of the CubicWeb framework
  CubicWeb is a semantic web application framework.
  .
@@ -69,7 +69,7 @@ Architecture: all
 XB-Python-Version: ${python:Versions}
 Provides: cubicweb-web-frontend
 Depends: ${python:Depends}, cubicweb-web (= ${source:Version}), cubicweb-ctl (= ${source:Version}), python-twisted-web
-Recommends: pyro, cubicweb-documentation (= ${source:Version})
+Recommends: pyro (< 4.0.0), cubicweb-documentation (= ${source:Version})
 Description: twisted-based web interface for the CubicWeb framework
  CubicWeb is a semantic web application framework.
  .
