--- a/debian/rules
+++ b/debian/rules
@@ -38,6 +38,8 @@ install: build $(basename $(wildcard debian/*.in))
 
 	# Put all the python library and data in cubicweb-common
 	# and scripts in cubicweb-server
+	# build doc
+	BUILDDIR=${PWD}/debian/tmp/cubicweb-book/en make -e -C doc/book/en html
 	dh_install -vi
 	# cwctl in the cubicweb-ctl package
 	rm -f debian/cubicweb-common/usr/share/pyshared/cubicweb/cwctl.py
