--- a/debian/cubicweb-documentation.install.in
+++ b/debian/cubicweb-documentation.install.in
@@ -1,2 +1,3 @@
 doc/book usr/share/doc/cubicweb-documentation
+doc/html usr/share/doc/cubicweb-documentation
 debian/cubicweb-doc usr/share/doc-base/cubicweb-doc
