[doc] fix build dir

--- a/doc/book/en/makefile
+++ b/doc/book/en/makefile
@@ -10,7 +10,7 @@ SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
 #BUILDDIR      = build
-BUILDDIR      = ../../html
+BUILDDIR      = ../..
 CWDIR         = ../../..
 JSDIR         = ${CWDIR}/web/data
 JSTORST       = ${CWDIR}/doc/tools/pyjsrest.py
