[test] New Handling of database for test.
This patch adds a new TestDataBaseHandler class.

TestDataBaseHandler are in charge of Setup, backup, restore, connection,
repository caching and cleanup for database used during the test.
TestDataBaseHandler reuse code and logic previously found in cubicweb.devtools
functions and devtools.testlib.CubicwebTC. TestDataBaseHandler is an abstract
class and must be subclassed to implement functionalities specific to each
driver.

TestDataBaseHandler can store and restore various database setups.
devtools.testlib.CubicwebTC gains a test_db_id class attribute to specify that
its TestCase uses a specific database that should be cached. The
pre_setup_database class method is used to setup the database that will be
cached. The setup_database method is kept uncached.

The same TestDataBaseHandler are reused for every test using the same config
object.  TestDataBaseHandler try to reuse Repository objects as much as
possible.

All cubicweb test have been updated.

--- a/.hgignore
+++ b/.hgignore
@@ -9,3 +9,9 @@
 \#.*?\#$
 \.swp$
 ^doc/book/en/apidoc$
+\.old$
+syntax: regexp
+.*/data/database/.*\.sqlite
+.*/data/database/.*\.config
+.*/data/database/tmpdb.*
+
