[book] fixes some references and other doc construction pbs
* predefine order of js files in index generation, skip some files
* fix some references to the base tutorial (recently changed)
* other ReST fixes

--- a/doc/book/en/makefile
+++ b/doc/book/en/makefile
@@ -33,7 +33,7 @@ help:
 
 clean:
 	rm -f *.html
-	-rm -rf ${BUILDDIR}/*
+	-rm -rf ${BUILDDIR}/html ${BUILDDIR}/doctrees
 	-rm -rf ${BUILDJS}
 
 all: html
