--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,8 @@ Uploaders: Sylvain Thenault <sylvain.thenault@logilab.fr>,
            Aurélien Campéas <aurelien.campeas@logilab.fr>,
            Nicolas Chauvat <nicolas.chauvat@logilab.fr>
 Build-Depends: debhelper (>= 7), python (>= 2.5), python-central (>= 0.5)
+# for the documentation:
+# python-sphinx, python-logilab-common, python-unittest2,
 Standards-Version: 3.9.1
 Homepage: http://www.cubicweb.org
 XS-Python-Version: >= 2.5, << 2.7
@@ -133,6 +135,7 @@ Description: tests suite and development tools for the CubicWeb framework
 
 
 Package: cubicweb-documentation
+Architecture: all
 Recommends: doc-base
 Description: documentation for the CubicWeb framework
  CubicWeb is a semantic web application framework.
