--- a/debian/rules
+++ b/debian/rules
@@ -10,14 +10,11 @@ PY_VERSION:=$(shell pyversions -d)
 build: build-stamp
 build-stamp:
 	dh_testdir
-	# XXX doesn't work if logilab-doctools, logilab-xml are not in build depends
-	# and I can't get pbuilder find them in its chroot :(
-	# cd doc && make
-	# FIXME cleanup and use sphinx-build as build-depends ?
 	NO_SETUPTOOLS=1 python setup.py build
-	# XXX uncomment this and associated build-depends in control
-	#when necessary sphinx version is in all built distribution
-	#PYTHONPATH=$(CURDIR)/.. $(MAKE) -C doc/book/en all
+	# documentation build is now made optional since it can break for old
+	# distributions and we don't want to block a new release of Cubicweb
+	# because of documentation issues.
+	-PYTHONPATH=$(CURDIR)/.. $(MAKE) -C doc/book/en all
 	touch build-stamp
 
 clean:
@@ -73,7 +70,7 @@ binary-indep: build install
 	dh_installman -i
 	dh_installchangelogs -i
 	dh_link -i
-	dh_compress -i -X.py -X.ini -X.xml
+	dh_compress -i -X.py -X.ini -X.xml -X.js -X.rst
 	dh_fixperms -i
 	dh_installdeb -i
 	dh_gencontrol  -i
