--- a/debian/control
+++ b/debian/control
@@ -37,6 +37,7 @@ Replaces: cubicweb-multisources
 Provides: cubicweb-multisources
 Depends: ${misc:Depends}, ${python:Depends}, cubicweb-common (= ${source:Version}), cubicweb-ctl (= ${source:Version}), python-logilab-database (>= 1.8.2), cubicweb-postgresql-support | cubicweb-mysql-support | python-pysqlite2
 Recommends: pyro (<< 4.0.0), cubicweb-documentation (= ${source:Version})
+Suggests: python-zmq
 Description: server part of the CubicWeb framework
  CubicWeb is a semantic web application framework.
  .
