[hg] ignore ldap database

--- a/.hgignore
+++ b/.hgignore
@@ -14,6 +14,7 @@ syntax: regexp
 .*/data/database/.*\.sqlite
 .*/data/database/.*\.config
 .*/data/database/tmpdb.*
+.*/data/ldapdb/.*
 ^doc/html/
 ^doc/doctrees/
 ^doc/book/en/devweb/js_api/
