[devtools] make a copy of the xvfb-run script so we can kill it properly
Since changeset a3d3bdd46463 we don't run firefox directly but through a
wrapper script.  This meant that on stopping the test, we would kill
that wrapper script but leave the Xvfb server and firefox processes
running.  So make a local copy of xvfb-run, and make it kill Xvfb when
it goes down, not just when its client exits.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -12,7 +12,7 @@ recursive-include misc *.py *.png *.display
 include web/views/*.pt
 recursive-include web/data external_resources *.js *.css *.py *.png *.gif *.ico *.ttf
 recursive-include web/wdoc *.rst *.png *.xml ChangeLog*
-recursive-include devtools/data *.js *.css
+recursive-include devtools/data *.js *.css *.sh
 
 recursive-include i18n *.pot *.po
 recursive-include schemas *.py *.sql
